add: new version of the tasks
