# docs/swagger.yaml
@@ -1,16 +1,15 @@
 definitions:
+  api.Artifact:
+    type: object
   api.CreateTaskRequest:
     properties:
-      get_command:
-        $ref: '#/definitions/api.GetCommand'
-      platform:
-        example: retina
-        type: string
+      get:
+        allOf:
+        - $ref: '#/definitions/api.GetTask'
+        description: One of Get
     type: object
   api.CreateTaskResponse:
     properties:
-      status:
-        type: string
       task_uuid:
         type: string
     type: object
@@ -19,19 +18,50 @@ definitions:
       error:
         type: string
     type: object
-  api.GetCommand:
+  api.GetArkTask:
     properties:
-      platform:
-        description: iris, retina
+      endpoint:
         type: string
     type: object
-  api.TaskResponse:
+  api.GetIrisTask:
     properties:
-      creation_request:
-        $ref: '#/definitions/api.CreateTaskRequest'
+      endpoint:
+        type: string
+    type: object
+  api.GetRetinaTask:
+    properties:
+      duration_seconds:
+        example: 60
+        type: integer
+      endpoint:
+        type: string
+      live:
+        type: boolean
+    type: object
+  api.GetTask:
+    properties:
+      ark:
+        $ref: '#/definitions/api.GetArkTask'
+      iris:
+        $ref: '#/definitions/api.GetIrisTask'
+      retina:
+        allOf:
+        - $ref: '#/definitions/api.GetRetinaTask'
+        description: One of Retina, GetIrisTask, GetArkTask
+    type: object
+  api.Task:
+    properties:
+      artifacts:
+        items:
+          $ref: '#/definitions/api.Artifact'
+        type: array
+      get:
+        allOf:
+        - $ref: '#/definitions/api.GetTask'
+        description: One of Get
       status:
         type: string
-      task_uuid:
+      uuid:
         type: string
     type: object
 info:
@@ -47,7 +77,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/api.TaskResponse'
+              $ref: '#/definitions/api.Task'
             type: array
         "500":
           description: Internal Server Error
@@ -79,7 +109,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/api.TaskResponse'
+              $ref: '#/definitions/api.Task'
             type: array
         "500":
           description: Internal Server Error
@@ -98,7 +128,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/api.TaskResponse'
+              $ref: '#/definitions/api.Task'
             type: array
         "500":
           description: Internal Server Error
@@ -155,7 +185,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.TaskResponse'
+            $ref: '#/definitions/api.Task'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
         "404":
           description: Not Found
           schema:
@@ -169,7 +203,7 @@ paths:
       - tasks
   /tasks/{task_uuid}/cancel:
     post:
-      description: Cancels or dequeues a task by UUID.
+      description: Cancels a running task by UUID.
       parameters:
       - description: Task UUID
         in: path
@@ -182,7 +216,11 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/api.TaskResponse'
+            $ref: '#/definitions/api.CreateTaskResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrorResponse'
         "404":
           description: Not Found
           schema:
